# jetbrains-plugin-server

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test-requirements.txt
.github/workflows/: release.yml  test.yaml
jetbrains_plugin_server/: __init__.py  config.py  homepage.py  plugin_catalog.py  schemas.py  server.py  to_xml.py
jetbrains_plugin_server/model/: data_listing.py  packages.py
jetbrains_plugin_server/tools/: dl_data.py  gen_json_cache.py
src/: config.py  plugin_catalog.py  plugin_model.py  schemas.py  server.py  to_xml.py
src/model/: data_listing.py
src/tools/: dl_data.py  gen_json_cache.py
tests/: dl_data.py  gen_data.py  local_gen_cache.py  test_normalize.py  test_plugins.py
tests/data/: plugins_test.json
